bug 861403 - fix mixing of device pixels with global display pixels in MoveClient and ResizeClient calculations. r=roc a=lsblakk